--- a/_config.yml
+++ b/_config.yml
@@ -404,7 +404,7 @@ commercial-ondemand-url: 'index.html#contact'
 #
 # Plan Ultimate
 #
-commercial-support-price: Prioritary Support
+commercial-support-price: Premium Support
 commercial-support-offer-1-title: Defects & Messages
 commercial-support-offer-1-info: We offer a higher priority for Defect correction and Message answers to our Sponsors. 
 commercial-support-offer-2-title: Interested?
