--- a/_config.yml
+++ b/_config.yml
@@ -416,7 +416,7 @@ commercial-support-url: 'index.html#contact'
 #
 commercial-donate-price: Donate
 commercial-donate-offer-1-title: Encouraging us?
-commercial-donate-offer-1-info: You just want to support this Open Source project? Encourage its improvement? Get your name in the donators page?
+commercial-donate-offer-1-info: Just wanting to support this Open Source project? Encourage its improvement? Showing your name as donator?
 commercial-donate-offer-2-title: Wall of Sponsors
 commercial-donate-offer-2-info: In exchange of +25$, You will receive our full gratitude and respect. Thank you.
 commercial-donate-url: 'donation.html'
