--- a/_config.yml
+++ b/_config.yml
@@ -282,7 +282,7 @@ testimonials-description: Users Testimonial
 #
 # Testimonials
 #
-testimonials:
+testimonials: Testimonials
 
 # Client
 - name: David Young
