--- a/_config.yml
+++ b/_config.yml
@@ -432,7 +432,7 @@ contact-description: Please fill out this form and we will get in touch with you
 #####################################
 #############   Footer   ############
 #####################################
-footer-description: Teampass is developed by Nils Laumaillé with &#9829; since 2009.
+footer-description: Teampass is made in France and developed by Nils Laumaillé with &#9829; since 2009.
 footer-copyright-text: Nils Laumaillé
 footer-copyright-url: http://teampass.net/
 footer-copyright-year: 2017
