--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ lang: en-US
 # Header Title
 header-title: a <strong>Deeper Dimension</strong>
 # Header Tagline
-headter-tagline: Give to Passwords
+headter-tagline: Give Passwords
 
 ####################################
 ######   CTA Header Buttons   ######
