--- a/_config.yml
+++ b/_config.yml
@@ -277,7 +277,7 @@ core-features-right:
 ########### Testimonials ############
 #####################################
 testimonials-title: Testimonials
-testimonials-description: Users words
+testimonials-description: Users words - Contact me to share your own experience regarding Teampass's usage in your environment.
 
 #
 # Testimonials
