--- a/_config.yml
+++ b/_config.yml
@@ -336,7 +336,7 @@ blog-description: Interdum et malesuada fames ac ante ipsum primis in faucibus. 
 ############### Team ################
 #####################################
 team-title: Who I am
-team-description: Teampass has been entirely developed by Nils Laumaillé based upon his original idea. [More about me}(https://nils.laumaille.fr/).
+team-description: Teampass has been entirely developed by Nils Laumaillé based upon his original idea. [More about me](https://nils.laumaille.fr/).
 
 #
 # Team Members
