--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,8 @@ header-secondary-button:
 # My folder for Demo Website is: /sera-onepage so baseurl: /sera-onepage
 #
 baseurl: ""
-url: "http://nilsteampassnet.github.io"
+#url: "https://nilsteampassnet.github.io"
+url: "https://teampass.net/"
 
 #
 # This is your email adress, contact from send here all emails from contact section
